--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,24 @@ code {
     monospace;
 }
 
+:root {
+  --main-color: #3498db;
+}
+
 #root {
   height: 100%;
   width: 100%;
 }
 
 .BackgroundMain {
-  height: 100%;
   width: 100%;
+  height: 100%;
   background: linear-gradient(45deg, rgba(255,255,255,1), rgba(148,216,249,1));
   animation: gradientMove 1s infinite alternate;
+  transition: background-color 1s ease;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 @keyframes gradientMove {
